random-prospects-generator-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "random-prospects-genetator-api"
spec:
  selector:
    matchLabels:
      app: "random-prospects-genetator-api"
  replicas: 1
  template:
    metadata:
      labels:
        app: "random-prospects-genetator-api"
    spec:
      containers:
        - name: "random-prospects-genetator-api"
          image: "fabiosartori/random-prospects-genetator-api:0.1.1"
          resources:
            limits:
              memory: 128Mi
              cpu: 256m
          ports:
            - containerPort: 8000
